--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-node_modules
+node_modules/
+.pnp
+.pnp.js
+
+dist/
+build/
+*.tsbuildinfo
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+.DS_Store
+*.swp
+*.swo
+*~
+
+coverage/
+.nyc_output/
+
+.env
+.env.local
+.env.*.local
+
+.cache/
+.temp/
+.tmp/
